updated events page week of 9/19

--- a/events-page.html
+++ b/events-page.html
@@ -101,7 +101,7 @@
                                     </div>
                                     <div class="date">
                                         <i class="fa fa-calendar"></i>
-                                        <span class="data">Last Updated: 11 September 2016</span>
+                                        <span class="data">Last Updated: 18 September 2016</span>
                                     </div>                        
                                 </div>
                             </div>
@@ -112,41 +112,31 @@
 								This page will get updated every week with new campus events for you to go to. Keep updated with all events taking place on campus
 								which you are more than welcome to use for your campus engagements. If you have any questions about times/locations feel free to
 								contact me and I'll help you find the answers! (Some events don't have links). It's also worth noting that there are many more events you
-								could go to that would count. So feel free to attend something no on the list!
+								could go to that would count. So feel free to attend something not on the list!
 							 </p>
 							 <ul class="tales-list">
-                                <li>ALL WEEK: "Nocturnes: Night Skies in Nineteenth-Century Art and the Darker Side of Modern Art" , UNI Gallery of Art ,  Gallery hours: 10 a.m. to 7 p.m., Mon. through Thurs.; noon to 5 p.m., Fri. and Sat</a></li>
-                                <li>ALL WEEK: "Illuminating Manuscripts", UNI Gallery of Art, Monday, August 22, 2016 - 10:00 am to Saturday, October 15, 2016 - 5:00 pm</a></li>
+                                <li>ALL WEEK: "Nocturnes: Night Skies in Nineteenth-Century Art and the Darker Side of Modern Art" , UNI Gallery of Art ,  Gallery hours: 10 a.m. to 7 p.m., Mon. through Thurs.; noon to 5 p.m., Fri. and Sat</li>
+                                <li>ALL WEEK: "Illuminating Manuscripts", UNI Gallery of Art, Monday, August 22, 2016 - 10:00 am to Saturday, October 15, 2016 - 5:00 pm</li>
 								<li><a href="https://www.library.uni.edu/rodcast/201609/takes-iowan">ALL WEEK: It Takes an Iowan, Marshall Center School (corner of W. 23rd and Indiana Streets), Friday, September 9, 2016 - 10:00 am to Saturday, October 8, 2016 - 4:00 pm</a></li>
-								<li><a href="http://www.uni.edu/ceee/resources/newsevents#enhance">9/12: Enhance Your College Experience, Rod Library 286 Makerspace Rm, Monday, September 12, 2016 - 10:00 am</a></li>
-								<li><a href="https://www.facebook.com/UniFinancialLiteracyClub/?ref=aymt_homepage_panel">9/12: Financial Literacy Club kickoff, Old Central Ballroom, Maucker Union, Monday, September 12, 2016 - 6:00 pm to 7:30 pm</a></li>
-								<li>9/13: UNI Volleyball vs. Iowa State, McLeod Center, Tuesday, September 13, 2016 - 7:00 pm</a></li>
-								<li><a href="http://www.uni.edu/ethics/current-events">9/13: Guest Lecturer: Brad Agle, Location TBA, Tuesday, September 13, 2016 - 7:00 pm</a></li>
-								<li>9/13: Faculty Recital: Tina Su, horn, with Polina Khatsko, piano and Ross Winter, violin, Davis Hall, GBPAC, Tuesday, September 13, 2016 - 8:00 pm</a></li>
-								<li><a href="http://www.tallgrassprairiecenter.org/">9/14: Prairie On Farms Field Day, Randy Luze Farm, 5718 12th Ave, Dysart, IA 52224, Wednesday, September 14, 2016 - 9:00 am to 1:00 pm</a></li>
-								<li><a href="http://studyabroad.uni.edu/index.cfm?FuseAction=Abroad.ViewLink&Parent_ID=0&Link_ID=FD93CB0F-5056-BA1F-71BE34B5B61BC2F4">9/14: Study Abroad Fair, Old Central Ballroom, Maucker Union, Wednesday, September 14, 2016 - 11:00 am to 3:00 pm</a></li>
-								<li><a href="http://www.physics.uni.edu/sites/default/files/tabei9-14-16.pdf">9/14: Physics Colloquium, Room 114, Begeman Hall, Wednesday, September 14, 2016 - 4:00 pm</a></li>
-								<li>9/15: Visiting ceramic sculptor Jason Briggs, Room 126, Kamerick Art Building, Thursday, September 15, 2016 - 9:30 am</a></li>
-								<li>9/15: Wayson Chiropractic Presentation, Rooms 007/009, Gilchrist Hall, Thursday, September 15, 2016 - 12:00 pm</a></li>
-								<li>9/15: Thursday Lunchtime Cribbage, Rod Library, Thursday, September 15, 2016 - 12:00 pm to 1:00 pm</li>
-								<li>9/15: Faculty Artist Lecture: "Strangers in a Strange Land: Spanish Chant Manuscript Leaves in the UNI Permanent Art Collection", UNI Gallery, Thursday, September 15, 2016 - 6:00 pm</li>
-								<li><a href="https://www.uni.edu/studentlife/fsl/nphc">9/15: Meet The Greeks, Oak Room, Maucker Union, Thursday, Thursday, September 15, 2016 - 6:30 pm</li>
-								<li><a href="http://www.gbpac.com/upcoming-events/e-700/george-thorogood--the-destroyers.aspx">9/15: George Thorogood and The Destroyers, Gallagher Bluedorn Performing Arts Center, Thursday, September 15, 2016 - 7:00 pm</a></li>
-								<li>9/15: #MauckerMovies: Keanu, Old Central Ballroom, Maucker Union, Thursday, September 15, 2016 - 7:00 pm</li>
-								<li>9/15: Visiting ceramic sculptor Jason Briggs, Room 111, Kamerick Art Building, Thursday, September 15, 2016 - 7:15 pm</a></li>
-								<li><a href="http://www.uni.edu/earth/content/observatory-visit"> 9/15: Observatory Show, Room 137, McCollum Science Hall, Thursday, September 15, 2016 - 9:00 pm to 10:00 pm</a></li>
-								<li><a href="http://www.tallgrassprairiecenter.org/">9/16: Prairie On Farms Field Day,ISU Borlaug Learning Center, 3327 290th St, Nashua, IA 50658, Friday, September 16, 2016 - 9:00 am to 12:30 pm</a></li>
-								<li>9/16: Visiting ceramic sculptor Jason Briggs, Room 126, Kamerick Art Building, Thursday, September 16, 2016 - 9:30 am</a></li>
-								<li>9/16: UNI Volleyball vs. Illinois State, McLeod Center, Friday, September 16, 2016 - 5:00 pm</a></li>
-								<li>9/16: Guest Artist Recital: Andrew Dahlke, saxophone, Davis Hall, GBPAC, Friday, September 16, 2016 - 8:00 pm</a></li>
-								<li><a href="https://www.facebook.com/events/599838123528914/">9/17: Explorers of Religion and Philosophy Club picnic, Seerley Park, Saturday, September 17, 2016 - 11:00 am</a></li>
-								<li><a href="http://www.unidancemarathon.com/product-page/6afe3f90-6e5f-a402-7f5a-8141f13cf217">9/17: Miles for Miracles 5K, Alumni House, Saturday, September 17, 2016 - 11:00 am</a></li>
-								<li>9/17: UNI Volleyball vs. Northwestern, McLeod Center, Saturday, September 17, 2016 - 12:00 pm</a></li>
-								<li><a href="http://www.tallgrassprairiecenter.org/">9/17: Iowa Prairie Heritage Week Prairie Walk, Bennington Township Cemetery, Waterloo, Iowa, Saturday, September 17, 2016 - 1:30 pm</a></li>
-								<li>9/17: UNI Volleyball vs. Syracuse, McLeod Center, Saturday, September 17, 2016 - 7:00 pm</a></li>
-								<li><a href="http://admin.unipanthers.com/schedule.aspx?path=wsoct">9/18: UNI Soccer vs. Western Illinois,  Waterloo Youth Soccer Complex, Sunday, September 18, 2016 - 12:00 pm</a></li>
-								<li>9/18: UNI Volleyball vs. North Dakota State, McLeod Center, Sunday, September 18, 2016 - 2:30 pm</a></li>
-								<li><a href="http://www.gbpac.com/upcoming-events/e-701/ronnie-milsap.aspx">9/18: Ronnie Milsap, Gallagher Bluedorn Performing Arts Center, Sunday, September 18, 2016 - 7:00 pm</a></li>
+								<li>9/19: Tobacco Cessation Session, Room 009, Gilchrist Hall, Monday, September 19, 2016 - 9:00 am</li>
+								<li><a href="http://www.uni.edu/careerservices/events">9/19: UNI Job and Internship Fair, McLeod Center, Monday, September 19, 2016 - 11:00 am to 3:00 pm</a></li>
+								<li>9/19: Tobacco Cessation Session, Room 009, Gilchrist Hall, Monday, September 19, 2016 - 3:00 pm</li>
+								<li><a href="https://www.eventbrite.com/e/dealing-with-racistand-other-inappropriatecomments-in-the-classroom-a-workshop-tickets-27575261349">9/21: Dealing With Racist - and Other Inappropriate - Comments in the Classroom Workshop, Room 301, Rod Library, Wednesday, September 21, 2016 - 9:30 am</a></li>
+								<li><a href="http://www.uni.edu/ethics/current-events">9/21: IRB 1: human subjects training for undergraduates, State College Room, Maucker Union, Wednesday, September 21, 2016 - 2:00 pm</a></li>
+								<li>9/21: 43rd Annual Carl Becker Memorial Lecture, Room 115, Seerley Hall, Wednesday, September 21, 2016 - 7:00 pm</li>
+								<li><a href="https://www.eventbrite.com/e/fall-network-retreat-tickets-26613974113">9/22: Iowa Campus Compact Fall Network Retreat, Georgian Lounge, Commons, Thursday, September 22, 2016 - 10:00 am to 3:00 pm</a></li>
+								<li>9/22: Teaching Iowa Students and the Changing Demographics in Iowa, Room 324, Rod Library, Thursday, September 22, 2016 - 12:30 pm</li>
+								<li>9/22: International Coffee Hour, Room 113, Maucker Union, Thursday, September 22, 2016 - 3:00 pm</li>
+								<li><a href="http://www.uni.edu/earth/content/observatory-visit"> 9/22: Observatory Show, Room 137, McCollum Science Hall, Thursday, September 22, 2016 - 9:00 pm to 10:00 pm</a></li>
+								<li><a href="https://www.facebook.com/unifilmappreciationclub/">9/23: Film Appreciation Club: 'Children of Men', Room 111, Kamerick Art Building, Friday, September 23, 2016 - 6:30 pm</a></li>
+								<li>9/23: UNI Soccer vs. Missouri State, Waterloo Youth Soccer Complex, Friday, September 23, 2016 - 7:00 pm</li>
+								<li><a href="http://www.uni.edu/music/events"> 9/23: Postcards from… the 35th Annual Scholarship Benefit Concert, Great Hall, GBPAC, Friday, September 23, 2016 - 7:30 pm</a></li>
+								<li><a href="http://www.uni.edu/music/events"> 9/24: Midwest Violin Caucus ftg. Laurie Smukler, violin, Davis Hall, GBPAC, Saturday, September 24, 2016 (All day)</a></li>
+								<li><a href="http://www.uni.edu/music/events"> 9/24: Guest Artist Master Class: Daniel Chapa, euphonium, Graham Hall, Russell Hall, Saturday, September 24, 2016 - 1:00 pm</a></li>
+								<li>9/24: CAB Guest Speaker: Matt Bellassai, Gallagher Bluedorn Performing Arts Center, Saturday, September 24, 2016 - 7:00 pm</li>
+								<li>9/25: UNI Soccer vs. Viterbo University, Waterloo Youth Soccer Complex, Sunday, September 25, 2016 - 1:00 pm</li>
+								<li><a href="http://www.uni.edu/music/events"> 9/25: UNI School of Music All State Wind, Brass and Percussion Workshops, Russell Hall & GBPAC, Sunday, September 25, 2016 - 2:00 pm</a></li>
+								<li>9/25: CAB: Homecoming Window Painting, College Hill, Sunday, September 25, 2016 - 4:00 pm to 6:00 pm</li>
                             </ul
 						</div>
                     </article>
