--- a/html_bucket_indexed_homepages/index-posts-9-12.html
+++ b/html_bucket_indexed_homepages/index-posts-9-12.html
@@ -164,9 +164,9 @@
                     </div>
 				
 					 <!-- NAV-BUTTON-FLAG --> 
-					<div class="paging"> <a href="..\index.html" class="newer"><i class="fa fa-long-arrow-left"> </i> Newer</a> <span>&bull;</span>  
-					<a href="../html_bucket_indexed_homepages/index-posts-5-8.html" class="older">Older <i class="fa fa-long-arrow-right">
-					</i></a> </div> 
+						<div class="paging"> <a href="../html_bucket_indexed_homepages/index-posts-13-16.html" class="newer"><i class="fa fa-long-arrow-left"> </i> Newer</a> <span>&bull;</span>  
+						<a href="../html_bucket_indexed_homepages/index-posts-5-8.html" class="older">Older <i class="fa fa-long-arrow-right">
+						</i></a> </div> 
 					<!-- NAV-BUTTON-FLAG -->
 					
                 </div>
