--- a/recaps-page.html
+++ b/recaps-page.html
@@ -113,7 +113,8 @@
 								If you ever need to sort specifically by class recaps, you know where to go. 
 							 </p>
 							 <ul class="tales-list">
-								<li><a href="html_bucket_class_recaps/9-19-class-recap.html">9/21/16 Today the people from the WRC told us a bunch of stuff. Go follow the twitter.</a></li>
+								<li><a href="html_bucket_class_recaps/9-23-class-recap.html">9/23/16 We wathced "World of Tomorrow" and discussed how exigency works within the short film.</a></li>
+								<li><a href="https://twitter.com/cornerstone2k16/status/778783703119962112">9/21/16 Today the people from the WRC told us a bunch of stuff. Go follow the twitter.</a></li>
 								<li><a href="html_bucket_class_recaps/9-19-class-recap.html">9/19/16 We discussed Exigency and how it relates to our favorite stories.</a></li>
 								<li><a href="html_bucket_class_recaps/9-16-class-recap.html">9/16/16 We took turns reading passages of our favorite stories from the week. Next Wednesday we have class in the commons.</a></li>
 								<li><a href="html_bucket_class_recaps/9-14-class-recap.html">9/14/16 We went outside and discussed this weeks readings. We also talked a bit of politics!</a></li>
