--- a/html_bucket_indexed_homepages/index-posts-13-16.html
+++ b/html_bucket_indexed_homepages/index-posts-13-16.html
@@ -149,7 +149,7 @@
                             <article class=" blog-teaser">
                                 <header>
                                     <img src="../img/campus-engagement-info-icon.png" alt="Campus Engagments">   <!-- Files ideally should be 123 x 123 px for thumbnails -->
-                                    <h3><a href="pdf/campus-engagements-pdf.pdf">Campus Engagements</a></h3>
+                                    <h3><a href="../pdf/campus-engagements-pdf.pdf">Campus Engagements</a></h3>
                                     <span class="meta">13 September 2016, Justice Adams</span>
 									<hr>
                                 </header>
@@ -157,7 +157,7 @@
                                 <div class="body">
 								  Forgot what you are supposed to do for your campus engagements? Then this is for you!
                                 <div class="clearfix">
-                                    <h3><a href="pdf/campus-engagements-pdf.pdf" class="btn btn-tales-one">Read More</a>
+                                    <h3><a href="../pdf/campus-engagements-pdf.pdf" class="btn btn-tales-one">Read More</a>
                                 </div>
                             </article>
                         </div>
