--- a/index.html
+++ b/index.html
@@ -94,6 +94,23 @@
 						<div class="col-md-6 col-sm-6">
                             <article class=" blog-teaser">
                                 <header>
+                                    <img src="img/9-30-recap-icon.png" alt="9-30 class Recap">   <!-- Files ideally should be 123 x 123 px for thumbnails -->
+                                    <h3><a href="html_bucket_class_recaps/9-30-class-recap.html">Friday 9/30 Recap</a></h3>
+                                    <span class="meta">2 October 2016, Justice Adams</span>
+									<hr>
+                                </header>
+								
+                                <div class="body">
+								  We discussed each story in class by reading passages, talked about how exigency works within them, and listened to Jazz music.
+                                <div class="clearfix">
+                                    <h3><a href="html_bucket_class_recaps/9-30-class-recap.html" class="btn btn-tales-one">Read More</a>
+                                </div>
+                            </article>
+                        </div>
+					
+						<div class="col-md-6 col-sm-6">
+                            <article class=" blog-teaser">
+                                <header>
                                     <img src="img/9-28-recap-icon.png" alt="9-28 class Recap">   <!-- Files ideally should be 123 x 123 px for thumbnails -->
                                     <h3><a href="html_bucket_class_recaps/9-28-class-recap.html">Wednesday 9/28 Recap</a></h3>
                                     <span class="meta">28 September 2016, Justice Adams</span>
