--- a/recaps-page.html
+++ b/recaps-page.html
@@ -113,6 +113,7 @@
 								If you ever need to sort specifically by class recaps, you know where to go. 
 							 </p>
 							 <ul class="tales-list">
+								<li><a href="html_bucket_class_recaps/10-3-class-recap.html">10/3/16 Nick went over the concept of voice, and we used Louis CK to demonstrate how it works.</a></li>
 								<li><a href="html_bucket_class_recaps/9-30-class-recap.html">9/30/16 We talked about each storie, read our favorite passages aloud, and listen to Jazz Music!</a></li>
 								<li><a href="html_bucket_class_recaps/9-28-class-recap.html">9/28/16 We played 2 truths and a lie, and watched a british TV show in class.</a></li>
 								<li><a href="html_bucket_class_recaps/9-26-class-recap.html">9/26/16 We talked about lies, and how they are required for belief in some stories.</a></li>
