--- a/recaps-page.html
+++ b/recaps-page.html
@@ -101,7 +101,7 @@
                                     </div>
                                     <div class="date">
                                         <i class="fa fa-calendar"></i>
-                                        <span class="data">Last Updated: 9 October 2016</span>
+                                        <span class="data">Last Updated: 13 October 2016</span>
                                     </div>                        
                                 </div>
                             </div>
@@ -113,10 +113,11 @@
 								If you ever need to sort specifically by class recaps, you know where to go. 
 							 </p>
 							 <ul class="tales-list">
+								<li><a href="html_bucket_class_recaps/10-12-class-recap.html">10/12/16 We talked about escapism within Wall-E and discussed the term juxtaposition and how it fits in. </a></li>
 								<li><a href="html_bucket_class_recaps/10-10-class-recap.html">10/10/16 Nick gave a lecture on escapism. We then watched a portion of Wall-E and discussed escapism within it. </a></li>
 								<li><a href="html_bucket_class_recaps/10-7-class-recap.html">10/7/16 We discussed the financial aid presentation, and then discussed Tobias wolff's writing style. </a></li>
 								<li><a href="html_bucket_class_recaps/10-3-class-recap.html">10/3/16 Nick went over the concept of voice, and we used Louis CK to demonstrate how it works.</a></li>
-								<li><a href="html_bucket_class_recaps/9-30-class-recap.html">9/30/16 We talked about each storie, read our favorite passages aloud, and listen to Jazz Music!</a></li>
+								<li><a href="html_bucket_class_recaps/9-30-class-recap.html">9/30/16 We talked about each story, read our favorite passages aloud, and listened to Jazz Music!</a></li>
 								<li><a href="html_bucket_class_recaps/9-28-class-recap.html">9/28/16 We played 2 truths and a lie, and watched a british TV show in class.</a></li>
 								<li><a href="html_bucket_class_recaps/9-26-class-recap.html">9/26/16 We talked about lies, and how they are required for belief in some stories.</a></li>
 								<li><a href="html_bucket_class_recaps/9-23-class-recap.html">9/23/16 We wathced "World of Tomorrow" and discussed how exigency works within the short film.</a></li>
