--- a/events-page.html
+++ b/events-page.html
@@ -101,7 +101,7 @@
                                     </div>
                                     <div class="date">
                                         <i class="fa fa-calendar"></i>
-                                        <span class="data">Last Updated: 2 October 2016</span>
+                                        <span class="data">Last Updated: 16 October 2016</span>
                                     </div>                        
                                 </div>
                             </div>
@@ -115,40 +115,44 @@
 								could go to that would count. So feel free to attend something not on the list!
 							 </p>
 							 <ul class="tales-list">
-                                <li>ALL WEEK: "Nocturnes: Night Skies in Nineteenth-Century Art and the Darker Side of Modern Art" , UNI Gallery of Art ,  Gallery hours: 10 a.m. to 7 p.m., Mon. through Thurs.; noon to 5 p.m., Fri. and Sat</li>
-                                <li>ALL WEEK: "Illuminating Manuscripts", UNI Gallery of Art, Monday, August 22, 2016 - 10:00 am to Saturday, October 15, 2016 - 5:00 pm</li>
-								<li><a href="https://www.library.uni.edu/rodcast/201609/takes-iowan">ALL WEEK: It Takes an Iowan, Marshall Center School (corner of W. 23rd and Indiana Streets), Friday, September 9, 2016 - 10:00 am to Saturday, October 8, 2016 - 4:00 pm</a></li>
-								<li><a href="http://www.uni.edu/music/events"> 10/3 ALL DAY: UNI School of Music Vocal Arts Festival, Great Hall, GBPAC, Monday, October 3, 2016 (All day)</a></li>
-								<li>10/3: CAB: CROW Forum: Gender, Sexuality, and Quaker Identity in Youth Literature, Room 287, Rod Library, Monday, October 3, 2016 - 12:00 pm</li>
-								<li>10/3: How to pronounce Chinese names, part 2, Room 378, Rod Library, Monday, October 3, 2016 - 12:00 pm</li>
-								<li><a href="http://uni.edu/ethics/current-events">10/3: RCR 2: Ethical Issues in Quantitative Research, Oak Room, Maucker Union, Monday, October 3, 2016 - 3:00 pm</a></li>
-								<li><a href="http://www.uni.edu/provost/diversity">10/3: All Inclusive Affinity Group Cocktail Event, ScholarSpace 301, Rod LIbrary, Monday, October 3, 2016 -3:15 pm to 4:45 pm</a></li>
-								<li>10/3: Camp Adventure Pizza Info Session, Oak Room, Maucker Union, Monday, October 3, 2016 -5:00 pm to 7:00 pm</li>
-								<li>10/3: UNI Volleyball vs. Indiana State, McLeod Center, Monday, October 3, 2016 - 7:00 pm</li>
-								<li><a href="http://www.uni.edu/music/events"> 10/3: Guest Artist Recital: Tony Baker, trombone, Bengtson Auditorium, Russell Hall, Monday, October 3, 2016 - 7:30 pm</a></li>
-								<li><a href="https://www.facebook.com/UNIpsychclub/"> 10/3: Psychology Club meeting, Room 320, Curris Business Building, Monday, October 3, 2016 - 8:00 pm</a></li>
-								<li><a href="http://uni.edu/engagement/"> 10/4: Second Annual Town Hall for Community Engagement, Slife Ballroom, Commons, Tuesday, October 4, 2016 - 9:00 am to 11:30 am</a></li>
-								<li>10/4: Personal Development Workshop Series, Elm Room, Maucker Union, Tuesday, October 4, 2016 - 6:00 pm</li>
-								<li><a href="https://www.facebook.com/UNIEmployeeWellbeing/"> 10/5 ALL DAY: Healthiest State Walk, Fountain, Maucker Union, Wednesday, October 5, 2016 (All day)</a></li>
-								<li><a href="http://www.grad.uni.edu/"> 10/5: Information Literacy for Graduate Students: Everything a Graduate Student Should Know Before Starting a Research Project, Room 373, Rod Library, Tuesday, Wednesday, October 5, 2016 - 10:00 am to 11:30 am</a></li>
-								<li>10/5: Diversity Colloquium: Mentoring: Promises and Pitfalls, Room 378, Rod Library, Wednesday, October 5, 2016 - 12:00 pm</li>
-								<li>10/5: Camp Adventure Info Session, Oak Room, Maucker Union (by chats), Wednesday, October 5, 2016 - 5:00 pm to 8:00 pm</li>
-								<li><a href="http://www.uni.edu/music/events"> 10/5: UNI Bass Studio Recital, Davis Hall, GBPAC, Wednesday, October 5, 2016 - 6:00 pm</a></li>
-								<li><a href="http://uni.edu/sustainability/"> 10/5: The Invention of Nature with Andrea Wulf, Auditorium, Lang Hall, Wednesday, October 5, 2016 - 7:00 pm</a></li>
-								<li>10/5: Spotlight Series Concert: Wind Symphony & Symphonic Band, Great Hall, GBPAC, Wednesday, October 5, 2016 - 7:30 pm</li>
-								<li>10/6: Thursday lunchtime cribbage, Book Bistro, Rod Library, Thursday, October 6, 2016 - 12:00 pm</li>
-								<li>10/6: International Coffee Hour, Room 113, Maucker Union, Thursday, October 6, 2016 - 3:00 pm</li>
-								<li><a href="http://www.unidancemarathon.com/"> 10/6: UNI Dance Marathon Orange Party, Campanile, Thursday, October 6, 2016 - 6:00 pm</a></li>
-								<li>10/6: Bradford Tice Poetry Reading, Room 1017, Bartlett Hall, Thursday, October 6, 2016 - 7:30 pm</li>
-								<li><a href="http://uni.edu/theatre/theatre-uni/dead-mans-cell-phone"> 10/6: Theatre UNI: Dead Man's Cellphone, Bertha Martin Theatre-Strayer-Wood Theatre, Thursday, October 6, 2016 - 7:30 pm</a></li>
-								<li><a href="http://www.uni.edu/earth/content/observatory-visit"> 10/6: Observatory Show, Room 137, McCollum Science Hall, Thursday, September 29, 2016 - 9:00 pm to 10:00 pm</a></li>
-								<li>10/7: Lecture: Wonjae Lee, KAB 111, Friday, October 7, 2016 - 9:00 am</li>
-								<li><a href="https://www.facebook.com/events/924781254317059/"> 10/7: CME First Friday: Hispanic Heritage Month, Coffeehouse, Maucker Union, Friday, October 7, 2016 - 5:00 pm</a></li>
-								<li>10/7: Outdoor Movie Social, Lawther Field, Friday, October 7, 2016 - 7:00 pm</li>
-								<li>10/7: Spotlight Series: UNI Jazz Band One and Jazz Panthers, Bengtson Auditorium, Russell Hall, Friday, October 7, 2016 - 7:30 pm</li>
-								<li><a href="http://uni.edu/theatre/theatre-uni/dead-mans-cell-phone"> 10/7: Theatre UNI: Dead Man's Cellphone, Bertha Martin Theatre-Strayer-Wood Theatre, Frdiay, October 7, 2016 - 7:30 pm</a></li>
-								<li><a href="http://uni.edu/theatre/theatre-uni/dead-mans-cell-phone"> 10/8: Theatre UNI: Dead Man's Cellphone, Bertha Martin Theatre-Strayer-Wood Theatre, Saturday, October 8, 2016 - 7:30 pm</a></li>
-								<li><a href="http://uni.edu/theatre/theatre-uni/dead-mans-cell-phone"> 10/9: Theatre UNI: Dead Man's Cellphone, Bertha Martin Theatre-Strayer-Wood Theatre, Sunday, October 9, 2016 - 2:00 pm</a></li>
+                                <li><a href="https://www.library.uni.edu/rodcast/201610/october-digital-image-exhibit">ALL WEEK: October Digital Image Exhibit, Rod Library,  Saturday, October 1, 2016 - 9:00 am to Monday, October 31, 2016 - 9:00 pm</a></li>
+                                <li><a href="http://www.uni.edu/csbs/womenstudies/clothesline-project-2016"> 10/17: The Clothesline Project, Main Corridor, Wellness/Recreation Corridor, Monday, October 17, 2016 - 2:30 pm to 4:30 pm</a></li>
+								<li>10/17: Biology Department Thesis Defense, Room 103, McCollum Science Hall, Monday, October 17, 2016 - 4:00 pm</li>
+								<li><a href="http://www.uni.edu/music/events"> 10/17: Guest Artist Recital: Mary Stolper, flute, Bengtson Auditorium, Russell Hall, Monday, October 17, 2016 - 7:30 pm</a></li>
+								<li><a href="http://www.uni.edu/csbs/womenstudies/clothesline-project-2016"> 10/18: The Clothesline Project, Main Corridor, Wellness/Recreation Corridor, Tuesday, October 18, 2016 - 11:00 am to 1:00 pm</a></li>
+								<li><a href="https://www.grad.uni.edu/sites/default/files/brown_bag_lectures_schedule.pdf"> 10/18: Graduate College Brown Bag Lecture, Presidential Room, Maucker Union, Tuesday, October 18, 2016 - 12:30 pm to 1:20 pm</a></li>
+								<li>10/18: An Introduction to Qualtrics, Room 102, Sabin Hall, Tuesday, October 18, 2016 - 2:00 pm to 3:00 pm</li>
+								<li><a href="http://www.introspect-uni.org/"> 10/18: Personal Development Workshop Series, Elm Room, Maucker Union, Tuesday, October 18, 2016 - 6:00 pm</a></li>
+								<li><a href="http://www.uni.edu/music/events"> 10/18: Women&rsquo;s Chorus & Varsity Men&rsquo;s Glee Club, Great Hall, GBPAC, Tuesday, October 18, 2016 - 7:30 pm</a></li>
+								<li>10/19: An Introduction to Qualtrics, Room 102, Sabin Hall, Wednesday, October 19, 2016 - 12:00 pm to 1:00 pm</li>
+								<li><a href="http://www.uni.edu/csbs/womenstudies/clothesline-project-2016"> 10/19: The Clothesline Project, Maucker Union, Wednesday, October 19, 2016 - 1:00 pm to 3:00 pm</a></li>
+								<li>10/19: Camp Adventure Info Session, Maucker Union (by Chats), Wednesday, October 19, 2016 - 5:00 pm to 8:00 pm</li>
+								<li><a href="http://www.uni.edu/music/events"> 10/19: Faculty Artist Recital: Kairos Trio (ftg. Bellamy, McCandless and Peyton), Davis Hall, GBPAC, Wednesday, October 19, 2016 - 6:00 pm</a></li>
+								<li>10/19: PAT/History Club Lecture, Room 115, Seerley Hall, Wednesday, October 19, 2016 - 7:00 pm</li>
+								<li><a href="https://www.facebook.com/events/1763179660603677/"> 10/19: Deaf Community panel, Room 002, Sabin Hall, Wednesday, October 19, 2016 - 7:00 pm</a></li>
+								<li><a href="http://uni.edu/ethics/current-events"> 10/20: RCR 4: Avoiding Plagiarism, Rod Library, Thursday, October 20, 2016 - 12:00 pm</a></li>
+								<li>10/20: Thursday lunchtime cribbage, Book Bistro, Rod Library, Thursday, October 20, 2016 - 12:00 pm</li>
+								<li><a href="http://www.uni.edu/csbs/womenstudies/clothesline-project-2016"> 10/20: The Clothesline Project, Maucker Union, Thursday, October 20, 2016 - 1:00 pm to 3:00 pm</a></li>
+								<li>10/20: International Coffee Hour, Room 113, Maucker Union, Thursday, October 20, 2016 - 3:00 pm</li>
+								<li><a href="https://www.facebook.com/events/1706509789671072/"> 10/20: Flying Spaghetti Monster Dinner, Wesley Foundation, Thursday, October 20, 2016 - 5:30 pm to 7:00 pm</a></li>
+								<li><a href="https://www.library.uni.edu/rodcast/201610/rock-stacks"> 10/20: Rock the Stacks, UNI Museum, Rod Library, Thursday, October 20, 2016 - 7:00 pm to 9:00 pm</a></li>
+								<li><a href="http://ev12.evenue.net/cgi-bin/ncommerce3/SEGetEventInfo?ticketCode=GS%3AUNI%3AUSM17%3ASMK20%3A&linkID=twuni&shopperContext=&pc=&caller=&appCode=&groupCode=SS&cgc="> 10/20: Spotlight Series Concert: Northern Iowa Symphony Orchestra, Great Hall, GBPAC,
+									Thursday, October 20, 2016 - 7:30 pm</a></li>
+								<li><a href="http://www.uni.edu/earth/content/observatory-visit"> 10/20: Observatory Show, Room 137, McCollum Science Hall, Thursday, October 20, 2016 - 9:00 pm to 10:00 pm</a></li>
+								<li><a href="https://www.library.uni.edu/rodcast/201609/attend-open-textbook-network-workshop"> 10/21: Open Textbook Faculty Workshop, Room 287, Rod Library, Friday, October 21, 2016 - 1:00 pm to 3:00 pm</a></li>
+								<li>10/21: Safe Space and Trigger Warnings: A Panel Discussion, Room 378, Rod Library, Friday, October 21, 2016 - 2:00 pm</li>
+								<li>10/21: UNI Swimming & Diving vs. Sioux Falls, Glen F. Henry Swimming & Diving Pool (WRC), Friday, October 21, 2016 - 5:00 pm</li>
+								<li>10/21: UNI Swimming & Diving vs. Quincy, Glen F. Henry Swimming & Diving Pool (WRC), Friday, October 21, 2016 - 5:00 pm</li>
+								<li><a href="http://www.uni.edu/music/events"> 10/21: OcTUBAfest: UNI Tuba/Euphonium Studio Recital, Davis Hall, GBPAC, Friday, October 21, 2016 - 6:00 pm</a></li>
+								<li><a href="http://www.gbpac.com/upcoming-events/e-705/unelectable-you.aspx"> 10/21: Unelectable You, Gallagher Bluedorn Performing Arts Center, Friday, October 21, 2016 - 7:00 pm</a></li>
+								<li>10/21: UNI Volleyball vs. Evansville, McLeod Center, Friday, October 21, 2016 - 7:00 pm</li>
+								<li>10/21: Diversity Colloquium: "What You Think You Know About Politics...And Why You May Be Wrong", Room 301, Rod Library, Friday, October 21, 2016 - 7:00 pm</li>
+								<li><a href="http://www.uni.edu/music/uni-keyboard-festival"> 10/22 ALL DAY: UNI School of Music Keyboard Festival, Davis and Jebe Halls, GBPAC, Saturday, October 22, 2016 (All day)</a></li>
+								<li>10/22: Family Weekend at Rod Library, Rod Library, Saturday, October 22, 2016 - 10:00 am to 2:00 pm</li>
+								<li>10/22: Camp Adventure College of Education Welcome, Rod Library, Saturday, October 22, 2016 - 10:30 am to 12:30 pm</li>
+								<li>10/22: UNI Football vs. Missouri State (Family Weekend), UNI-Dome, Saturday, October 22, 2016 - 1:00 pm</li>
+								<li>10/22: UNI Volleyball vs. Southern Illinois, McLeod Center, Saturday, October 22, 2016 - 7:00 pm</li>
+								<li>10/23: UNI Soccer vs. Iowa State, Waterloo Youth Soccer Complex, Sunday, October 23, 2016 - 1:00 pm</li>
                             </ul>
 						</div>
                     </article>
