--- a/recaps-page.html
+++ b/recaps-page.html
@@ -113,6 +113,7 @@
 								If you ever need to sort specifically by class recaps, you know where to go. 
 							 </p>
 							 <ul class="tales-list">
+								<li><a href="html_bucket_class_recaps/10-19-class-recap.html">10/19/16 We deconstructed the characters in Harvey individually as groups. </a></li>
 								<li><a href="html_bucket_class_recaps/10-17-class-recap.html">10/17/16 We went over character and voice by watching a segment from Louie. I'll show you how to register for classes next time! </a></li>
 								<li><a href="html_bucket_class_recaps/10-14-class-recap.html">10/14/16 We discussed the short stories, and real world prison expirements. Read Harvey for next week. </a></li>
 								<li><a href="html_bucket_class_recaps/10-12-class-recap.html">10/12/16 We talked about escapism within Wall-E and discussed the term juxtaposition and how it fits in. </a></li>
