events page updated week of 10/24

--- a/events-page.html
+++ b/events-page.html
@@ -101,7 +101,7 @@
                                     </div>
                                     <div class="date">
                                         <i class="fa fa-calendar"></i>
-                                        <span class="data">Last Updated: 16 October 2016</span>
+                                        <span class="data">Last Updated: 23 October 2016</span>
                                     </div>                        
                                 </div>
                             </div>
@@ -116,43 +116,52 @@
 							 </p>
 							 <ul class="tales-list">
                                 <li><a href="https://www.library.uni.edu/rodcast/201610/october-digital-image-exhibit">ALL WEEK: October Digital Image Exhibit, Rod Library,  Saturday, October 1, 2016 - 9:00 am to Monday, October 31, 2016 - 9:00 pm</a></li>
-                                <li><a href="http://www.uni.edu/csbs/womenstudies/clothesline-project-2016"> 10/17: The Clothesline Project, Main Corridor, Wellness/Recreation Corridor, Monday, October 17, 2016 - 2:30 pm to 4:30 pm</a></li>
-								<li>10/17: Biology Department Thesis Defense, Room 103, McCollum Science Hall, Monday, October 17, 2016 - 4:00 pm</li>
-								<li><a href="http://www.uni.edu/music/events"> 10/17: Guest Artist Recital: Mary Stolper, flute, Bengtson Auditorium, Russell Hall, Monday, October 17, 2016 - 7:30 pm</a></li>
-								<li><a href="http://www.uni.edu/csbs/womenstudies/clothesline-project-2016"> 10/18: The Clothesline Project, Main Corridor, Wellness/Recreation Corridor, Tuesday, October 18, 2016 - 11:00 am to 1:00 pm</a></li>
-								<li><a href="https://www.grad.uni.edu/sites/default/files/brown_bag_lectures_schedule.pdf"> 10/18: Graduate College Brown Bag Lecture, Presidential Room, Maucker Union, Tuesday, October 18, 2016 - 12:30 pm to 1:20 pm</a></li>
-								<li>10/18: An Introduction to Qualtrics, Room 102, Sabin Hall, Tuesday, October 18, 2016 - 2:00 pm to 3:00 pm</li>
-								<li><a href="http://www.introspect-uni.org/"> 10/18: Personal Development Workshop Series, Elm Room, Maucker Union, Tuesday, October 18, 2016 - 6:00 pm</a></li>
-								<li><a href="http://www.uni.edu/music/events"> 10/18: Women&rsquo;s Chorus & Varsity Men&rsquo;s Glee Club, Great Hall, GBPAC, Tuesday, October 18, 2016 - 7:30 pm</a></li>
-								<li>10/19: An Introduction to Qualtrics, Room 102, Sabin Hall, Wednesday, October 19, 2016 - 12:00 pm to 1:00 pm</li>
-								<li><a href="http://www.uni.edu/csbs/womenstudies/clothesline-project-2016"> 10/19: The Clothesline Project, Maucker Union, Wednesday, October 19, 2016 - 1:00 pm to 3:00 pm</a></li>
-								<li>10/19: Camp Adventure Info Session, Maucker Union (by Chats), Wednesday, October 19, 2016 - 5:00 pm to 8:00 pm</li>
-								<li><a href="http://www.uni.edu/music/events"> 10/19: Faculty Artist Recital: Kairos Trio (ftg. Bellamy, McCandless and Peyton), Davis Hall, GBPAC, Wednesday, October 19, 2016 - 6:00 pm</a></li>
-								<li>10/19: PAT/History Club Lecture, Room 115, Seerley Hall, Wednesday, October 19, 2016 - 7:00 pm</li>
-								<li><a href="https://www.facebook.com/events/1763179660603677/"> 10/19: Deaf Community panel, Room 002, Sabin Hall, Wednesday, October 19, 2016 - 7:00 pm</a></li>
-								<li><a href="http://uni.edu/ethics/current-events"> 10/20: RCR 4: Avoiding Plagiarism, Rod Library, Thursday, October 20, 2016 - 12:00 pm</a></li>
-								<li>10/20: Thursday lunchtime cribbage, Book Bistro, Rod Library, Thursday, October 20, 2016 - 12:00 pm</li>
-								<li><a href="http://www.uni.edu/csbs/womenstudies/clothesline-project-2016"> 10/20: The Clothesline Project, Maucker Union, Thursday, October 20, 2016 - 1:00 pm to 3:00 pm</a></li>
-								<li>10/20: International Coffee Hour, Room 113, Maucker Union, Thursday, October 20, 2016 - 3:00 pm</li>
-								<li><a href="https://www.facebook.com/events/1706509789671072/"> 10/20: Flying Spaghetti Monster Dinner, Wesley Foundation, Thursday, October 20, 2016 - 5:30 pm to 7:00 pm</a></li>
-								<li><a href="https://www.library.uni.edu/rodcast/201610/rock-stacks"> 10/20: Rock the Stacks, UNI Museum, Rod Library, Thursday, October 20, 2016 - 7:00 pm to 9:00 pm</a></li>
-								<li><a href="http://ev12.evenue.net/cgi-bin/ncommerce3/SEGetEventInfo?ticketCode=GS%3AUNI%3AUSM17%3ASMK20%3A&linkID=twuni&shopperContext=&pc=&caller=&appCode=&groupCode=SS&cgc="> 10/20: Spotlight Series Concert: Northern Iowa Symphony Orchestra, Great Hall, GBPAC,
-									Thursday, October 20, 2016 - 7:30 pm</a></li>
-								<li><a href="http://www.uni.edu/earth/content/observatory-visit"> 10/20: Observatory Show, Room 137, McCollum Science Hall, Thursday, October 20, 2016 - 9:00 pm to 10:00 pm</a></li>
-								<li><a href="https://www.library.uni.edu/rodcast/201609/attend-open-textbook-network-workshop"> 10/21: Open Textbook Faculty Workshop, Room 287, Rod Library, Friday, October 21, 2016 - 1:00 pm to 3:00 pm</a></li>
-								<li>10/21: Safe Space and Trigger Warnings: A Panel Discussion, Room 378, Rod Library, Friday, October 21, 2016 - 2:00 pm</li>
-								<li>10/21: UNI Swimming & Diving vs. Sioux Falls, Glen F. Henry Swimming & Diving Pool (WRC), Friday, October 21, 2016 - 5:00 pm</li>
-								<li>10/21: UNI Swimming & Diving vs. Quincy, Glen F. Henry Swimming & Diving Pool (WRC), Friday, October 21, 2016 - 5:00 pm</li>
-								<li><a href="http://www.uni.edu/music/events"> 10/21: OcTUBAfest: UNI Tuba/Euphonium Studio Recital, Davis Hall, GBPAC, Friday, October 21, 2016 - 6:00 pm</a></li>
-								<li><a href="http://www.gbpac.com/upcoming-events/e-705/unelectable-you.aspx"> 10/21: Unelectable You, Gallagher Bluedorn Performing Arts Center, Friday, October 21, 2016 - 7:00 pm</a></li>
-								<li>10/21: UNI Volleyball vs. Evansville, McLeod Center, Friday, October 21, 2016 - 7:00 pm</li>
-								<li>10/21: Diversity Colloquium: "What You Think You Know About Politics...And Why You May Be Wrong", Room 301, Rod Library, Friday, October 21, 2016 - 7:00 pm</li>
-								<li><a href="http://www.uni.edu/music/uni-keyboard-festival"> 10/22 ALL DAY: UNI School of Music Keyboard Festival, Davis and Jebe Halls, GBPAC, Saturday, October 22, 2016 (All day)</a></li>
-								<li>10/22: Family Weekend at Rod Library, Rod Library, Saturday, October 22, 2016 - 10:00 am to 2:00 pm</li>
-								<li>10/22: Camp Adventure College of Education Welcome, Rod Library, Saturday, October 22, 2016 - 10:30 am to 12:30 pm</li>
-								<li>10/22: UNI Football vs. Missouri State (Family Weekend), UNI-Dome, Saturday, October 22, 2016 - 1:00 pm</li>
-								<li>10/22: UNI Volleyball vs. Southern Illinois, McLeod Center, Saturday, October 22, 2016 - 7:00 pm</li>
-								<li>10/23: UNI Soccer vs. Iowa State, Waterloo Youth Soccer Complex, Sunday, October 23, 2016 - 1:00 pm</li>
+								<li>10/24: You Matter at UNI Kick-Off!,Campanile Plaza and Lawther Field, Monday, October 24, 2016 - 11:00 am to 2:00 pm</li>
+								<li><a href="https://www.facebook.com/events/760975294042773/"> 10/24: UNI Nonprofit Leadership Alliance Info Meeting, Room 250, Wellness/Recreation Center, Monday, October 24, 2016 -4:30 pm to 5:00 pm</a></li>
+								<li><a href="http://uni.edu/advising/majors-minutes"> 10/24: Majors in Minutes, Old Central Ballroom, Maucker Union, Monday, October 24, 2016 - 7:00 pm</a></li>
+								<li>10/25: Project Base Learning: What is it and why should I care?, Room 378, Rod Library, Tuesday, October 25, 2016 - 12:00 pm</li>
+								<li><a href="https://www.facebook.com/events/1690178587975866/"> 10/25: Tacos with the Xi's, St. Stephen the Witness Catholic Student Center, Tuesday, October 25, 2016 -5:00 pm to 8:00 pm</a></li>
+								<li>10/25: Diversity Colloquium: "What You Think You Know About Politics...And Why You May Be Wrong", Room 301, Rod Library, Tuesday, October 25, 2016 - 7:00 pm</li>
+								<li>10/25: You Matter at UNI: Friend to Friend Training, ScholarSpace, Rod Library, Tuesday, October 25, 2016 - 7:00 pm to 8:00 pm</li>
+								<li><a href="http://www.uni.edu/music/events"> 10/25: UNI Horn Choir, Davis Hall, GBPAC,Tuesday, October 25, 2016 - 8:00 pm</a></li>
+								<li>10/26: Free Depression Screening, Counseling Center, 103 Student Health Center, Wednesday, October 26, 2016 - 11:00 am</li>
+								<li>10/26: Create Your Own Well-being Plan, Room 009, Gilchrist Hall, Wednesday, October 26, 2016 - 12:00 pm</li>
+								<li>10/26: Free Depression Screening, Counseling Center, 103 Student Health Center, Wednesday, October 26, 2016 - 1:00 pm</li>
+								<li>10/26: Healthy Holiday Food Demonstration, Room 007, Gilchrist Hall, Wednesday, October 26, 2016 - 2:00 pm</li>
+								<li>10/26: Free Depression Screening, Counseling Center, 103 Student Health Center, Wednesday, October 26, 2016 - 2:00 pm</li>
+								<li>10/26: Free Depression Screening, Counseling Center, 103 Student Health Center, Wednesday, October 26, 2016 - 3:00 pm</li>
+								<li><a href="https://www.facebook.com/unichge"> 10/26: "Schindler's List on the Prairie: Iowans' Response to the Holocaust as It Unfolded", Room 115, Seerley Hall, Wednesday, October 26, 2016 - 3:30 pm</a></li>
+								<li><a href="https://www.uni.edu/langlit/news/hoofnagle-book-launch-and-reading"> 10/26: Book launch and reading by Wendy Hoofnagle, 1017 Bartlett Hall, Wednesday, October 26, 2016 - 3:30 pm</a></li>
+								<li><a href="http://uni.edu/ethics/current-events"> 10/26: What If.... We Had An Actual Democracy in the U.S.?, Cedar Falls Public Library, Wednesday, October 26, 2016 - 7:00 pm</a></li>
+								<li><a href="https://www.facebook.com/unichge"> 10/26: A Continent Divided: Europe and Its Refugee Crisis, Room 002, Sabin Hall, Wednesday, October 26, 2016 - 7:00 pm</a></li>
+								<li>10/26: Secret Regrets, Room 111, Kamerick Art Building, Wednesday, October 26, 2016 - 7:00 pm to 8:00 pm</li>
+								<li><a href="http://www.uni.edu/music/events"> 10/26: Faculty Artist Recital: Julia Bullard, viola, with faculty and guest artists, Davis Hall, GBPAC, Wednesday, October 26, 2016 - 8:00 pm</a></li>
+								<li>10/26: Horror on Hudson, Noehren Hall, Wednesday, October 26, 2016 - 8:00 pm</li>
+								<li>10/27: De-Stress Day, Main Floor, Rod Library, Thursday, October 27, 2016 - 11:00 am to 2:00 pm</li>
+								<li>10/27: International Coffee Hour, Room 113, Maucker Union, Thursday, October 27, 2016 - 3:00 pm</li>
+								<li>10/27: Joanna Woodall: "When Are Portraits Works of Art?", Room 111, Kamerick Art Building, Thursday, October 27, 2016 - 5:30 pm</li>
+								<li><a href="http://www.uni.edu/music/events"> 10/27: Faculty Artist Recital: Ryan Frost, percussion, Davis Hall, GBPAC, Thursday, October 27, 2016 - 6:00 pm</a></li>
+								<li>10/27: "Troika in Cuba: Soul Deep", UNI Gallery of Art, Thursday, October 27, 2016 - 6:00 pm to Monday, November 28, 2016 - 7:00 pm</li>
+								<li><a href="http://www.gbpac.com/upcoming-events/e-706/menopause-the-musical.aspx"> 10/27: Menopause The Musical, GBPAC, Thursday, October 27, 2016 - 7:00 pm</a></li>
+								<li><a href="http://uni.edu/studentlife/cab"> 10/27: CAB-toberfest, Maucker Union, Thursday, October 27, 2016 - 7:00 pm</a></li>
+								<li>10/27: Proud's Annual Drag-A-Ganza, Auditorium, Lang Hall, Thursday, October 27, 2016 - 7:00 pm to 9:00 pm</li>
+								<li>10/27: Student Mental Health Panel, Room 115, Seerley Hall, Thursday, October 27, 2016 - 7:00 pm</li>
+								<li><a href="https://www.uni.edu/langlit/news/ftrs-fall-2016-readers-announced"> 10/27: Final Thursday Reading Series featuring Taylor Brorby, Hearst Center for the Arts, Thursday, October 27, 2016 - 7:00 pm</a></li>
+								<li><a href="http://www.uni.edu/music/events"> 10/27: Faculty Artist Recital: Ann Bradfield, saxophone, Davis Hall, GBPAC, Thursday, October 27, 2016 - 8:00 pm</a></li>
+								<li>10/27: Horror on Hudson, Noehren Hall, Thursday, October 27, 2016 - 8:00 pm</li>
+								<li><a href="http://www.uni.edu/earth/content/observatory-visit"> 10/27: Observatory Show, Room 137, McCollum Science Hall, Thursday, October 27, 2016 - 9:00 pm to 10:00 pm</a></li>
+								<li>10/28: "Troika in Cuba: Soul Deep", UNI Gallery of Art, Thursday, October 27, 2016 - 6:00 pm to Monday, November 28, 2016 - 7:00 pm</li>
+								<li>10/28: You Matter at UNI Wrap-Up, Scholar Space, Rod Library, Friday, October 28, 2016 - 11:00 am to 12:00 pm</li>
+								<li>10/28: Let's Talk Session, Rooms 311 and 312, Rod Library, Friday, October 28, 2016 - 3:00 pm to 5:00 pm</li>
+								<li><a href="https://uni.edu/chemistry/Halloween-House-Information"> 10/28: UNI Halloween House, Second floor, McCollum Science Hall, Friday, October 28, 2016 - 4:30 pm</a></li>
+								<li>10/28: UNI Men's Basketball vs. Bemidji State (Exhibition), McLeod Center, Friday, October 28, 2016 - 7:00 pm</li>
+								<li><a href="http://uni.edu/theatre/theatre-uni/12th-night"> 10/28: TheatreUNI: Twelfth Night, Strayer-Wood Theatre, Friday, October 28, 2016 - 7:30 pm</a></li>
+								<li>10/28: ISA Halloween Dance: Superheroes vs. Villains, Old Central Ballroom, Maucker Union, Friday, October 28, 2016 - 8:00 pm</li>
+								<li><a href="http://www.uni.edu/music/events"> 10/29: Music Education Workshop, Davis Hall, GBPAC, Saturday, October 29, 2016 (All day)</a></li>
+								<li>10/29: 2016 Missouri Valley Conference Cross Country Championship, Pheasant Ridge Golf Course (Cedar Falls), Saturday, October 29, 2016 - 10:00 am</li>
+								<li>10/29: Football vs. North Dakota State, UNI-Dome, Saturday, October 29, 2016 - 6:00 pm</li>
+								<li><a href="http://uni.edu/theatre/theatre-uni/12th-night"> 10/29: TheatreUNI: Twelfth Night, Strayer-Wood Saturday, October 29, 2016 - 7:30 pm</a></li>
+								<li><a href="http://uni.edu/theatre/theatre-uni/12th-night"> 10/30: TheatreUNI: Twelfth Night, Strayer-Wood Sunday, October 30, 2016 - 2:00 pm</a></li>
                             </ul>
 						</div>
                     </article>
