--- a/html_bucket_class_recaps/10-24-class-recap.html
+++ b/html_bucket_class_recaps/10-24-class-recap.html
@@ -151,7 +151,7 @@
 							<div class="auto-resizable-iframe"><div> <iframe frameborder="0" allowfullscreen="" src="https://www.youtube.com/embed/_kMzVNnv78w"></iframe> </div></div>
 							<br><center>Universal appeal: pets, sleep, makes you ingore the fact that the guy is listing sypmtoms that sound horrible.</center>
 							
-							<br><br><br>Universal appeal tends to play on the following within your own schema:
+							<br>Universal appeal tends to play on the following within your own schema:
 							<br> - Thoughts
 							<br> - Actions
 							<br> - Opinions
