--- a/html_bucket_indexed_homepages/index-posts-25-28.html
+++ b/html_bucket_indexed_homepages/index-posts-25-28.html
@@ -163,7 +163,7 @@
 					</div>
 					
 					 <!-- NAV-BUTTON-FLAG --> 
-					<div class="paging"> <a href="../index.html" class="newer"><i class="fa fa-long-arrow-left"> 
+					<div class="paging"> <a href="../html_bucket_indexed_homepages/index-posts-29-32.html" class="newer"><i class="fa fa-long-arrow-left"> 
 					</i> Newer</a> <span>&bull;</span>  <a href="../html_bucket_indexed_homepages/index-posts-21-24.html" class="older">
 					Older <i class="fa fa-long-arrow-right"></i></a> </div> 
 					<!-- NAV-BUTTON-FLAG -->
