--- a/html_bucket_other_posts/paul-crenshaw-visit.html
+++ b/html_bucket_other_posts/paul-crenshaw-visit.html
@@ -128,6 +128,7 @@
 							to attend. Let me know if you have any questions! Also, here's a 
 							<a href="https://www.google.com/maps/place/Commons/@42.516024,-92.4627503,17z/data=!4m12!1m6!3m5!1s0x87effff80bb2c0b3:0x984e6695109566ca!2sCommons!8m2!3d42.5160201!4d-92.4605616!3m4!1s0x87effff80bb2c0b3:0x984e6695109566ca!8m2!3d42.5160201!4d-92.4605616" target="blank">-- MAPS LINK--</a> 
 							To the commons if you forget where it's at!<br>
+							Here's a <a href="../pdf/paul-crenshaw-poster.pdf" target="_blank">--PDF-- </a> with some additional info.
 							</p>
 						</div>
                     </article>
