--- a/recaps-page.html
+++ b/recaps-page.html
@@ -113,6 +113,7 @@
 								If you ever need to sort specifically by class recaps, you know where to go. 
 							 </p>
 							 <ul class="tales-list">
+								<li><a href="html_bucket_class_recaps/10-28-class-recap.html">10/28/16 We talked a bit about Ishmael, and why Daniel Quinn decided to name the characters as he did.</a></li>
 								<li><a href="html_bucket_class_recaps/10-24-class-recap.html">10/24/16 Today we talked about universal appeal and watched a few videos. We'll be in the commons Wednesday!</a></li>
 								<li><a href="html_bucket_class_recaps/10-21-class-recap.html">10/21/16 We finished deconstructing the characters in harvey, and discussed the hidden gender roles of the time period. </a></li>
 								<li><a href="html_bucket_class_recaps/10-19-class-recap.html">10/19/16 We deconstructed the characters in Harvey individually as groups. </a></li>
