--- a/events-page.html
+++ b/events-page.html
@@ -101,7 +101,7 @@
                                     </div>
                                     <div class="date">
                                         <i class="fa fa-calendar"></i>
-                                        <span class="data">Last Updated: 23 October 2016</span>
+                                        <span class="data">Last Updated: 30 October 2016</span>
                                     </div>                        
                                 </div>
                             </div>
@@ -115,53 +115,41 @@
 								could go to that would count. So feel free to attend something not on the list!
 							 </p>
 							 <ul class="tales-list">
-                                <li><a href="https://www.library.uni.edu/rodcast/201610/october-digital-image-exhibit">ALL WEEK: October Digital Image Exhibit, Rod Library,  Saturday, October 1, 2016 - 9:00 am to Monday, October 31, 2016 - 9:00 pm</a></li>
-								<li>10/24: You Matter at UNI Kick-Off!,Campanile Plaza and Lawther Field, Monday, October 24, 2016 - 11:00 am to 2:00 pm</li>
-								<li><a href="https://www.facebook.com/events/760975294042773/"> 10/24: UNI Nonprofit Leadership Alliance Info Meeting, Room 250, Wellness/Recreation Center, Monday, October 24, 2016 -4:30 pm to 5:00 pm</a></li>
-								<li><a href="http://uni.edu/advising/majors-minutes"> 10/24: Majors in Minutes, Old Central Ballroom, Maucker Union, Monday, October 24, 2016 - 7:00 pm</a></li>
-								<li>10/25: Project Base Learning: What is it and why should I care?, Room 378, Rod Library, Tuesday, October 25, 2016 - 12:00 pm</li>
-								<li><a href="https://www.facebook.com/events/1690178587975866/"> 10/25: Tacos with the Xi's, St. Stephen the Witness Catholic Student Center, Tuesday, October 25, 2016 -5:00 pm to 8:00 pm</a></li>
-								<li>10/25: Diversity Colloquium: "What You Think You Know About Politics...And Why You May Be Wrong", Room 301, Rod Library, Tuesday, October 25, 2016 - 7:00 pm</li>
-								<li>10/25: You Matter at UNI: Friend to Friend Training, ScholarSpace, Rod Library, Tuesday, October 25, 2016 - 7:00 pm to 8:00 pm</li>
-								<li><a href="http://www.uni.edu/music/events"> 10/25: UNI Horn Choir, Davis Hall, GBPAC,Tuesday, October 25, 2016 - 8:00 pm</a></li>
-								<li>10/26: Free Depression Screening, Counseling Center, 103 Student Health Center, Wednesday, October 26, 2016 - 11:00 am</li>
-								<li>10/26: Create Your Own Well-being Plan, Room 009, Gilchrist Hall, Wednesday, October 26, 2016 - 12:00 pm</li>
-								<li>10/26: Free Depression Screening, Counseling Center, 103 Student Health Center, Wednesday, October 26, 2016 - 1:00 pm</li>
-								<li>10/26: Healthy Holiday Food Demonstration, Room 007, Gilchrist Hall, Wednesday, October 26, 2016 - 2:00 pm</li>
-								<li>10/26: Free Depression Screening, Counseling Center, 103 Student Health Center, Wednesday, October 26, 2016 - 2:00 pm</li>
-								<li>10/26: Free Depression Screening, Counseling Center, 103 Student Health Center, Wednesday, October 26, 2016 - 3:00 pm</li>
-								<li><a href="https://www.facebook.com/unichge"> 10/26: "Schindler's List on the Prairie: Iowans' Response to the Holocaust as It Unfolded", Room 115, Seerley Hall, Wednesday, October 26, 2016 - 3:30 pm</a></li>
-								<li><a href="https://www.uni.edu/langlit/news/hoofnagle-book-launch-and-reading"> 10/26: Book launch and reading by Wendy Hoofnagle, 1017 Bartlett Hall, Wednesday, October 26, 2016 - 3:30 pm</a></li>
-								<li><a href="http://uni.edu/ethics/current-events"> 10/26: What If.... We Had An Actual Democracy in the U.S.?, Cedar Falls Public Library, Wednesday, October 26, 2016 - 7:00 pm</a></li>
-								<li><a href="https://www.facebook.com/unichge"> 10/26: A Continent Divided: Europe and Its Refugee Crisis, Room 002, Sabin Hall, Wednesday, October 26, 2016 - 7:00 pm</a></li>
-								<li>10/26: Secret Regrets, Room 111, Kamerick Art Building, Wednesday, October 26, 2016 - 7:00 pm to 8:00 pm</li>
-								<li><a href="http://www.uni.edu/music/events"> 10/26: Faculty Artist Recital: Julia Bullard, viola, with faculty and guest artists, Davis Hall, GBPAC, Wednesday, October 26, 2016 - 8:00 pm</a></li>
-								<li>10/26: Horror on Hudson, Noehren Hall, Wednesday, October 26, 2016 - 8:00 pm</li>
-								<li>10/27: De-Stress Day, Main Floor, Rod Library, Thursday, October 27, 2016 - 11:00 am to 2:00 pm</li>
-								<li>10/27: International Coffee Hour, Room 113, Maucker Union, Thursday, October 27, 2016 - 3:00 pm</li>
-								<li>10/27: Joanna Woodall: "When Are Portraits Works of Art?", Room 111, Kamerick Art Building, Thursday, October 27, 2016 - 5:30 pm</li>
-								<li><a href="http://www.uni.edu/music/events"> 10/27: Faculty Artist Recital: Ryan Frost, percussion, Davis Hall, GBPAC, Thursday, October 27, 2016 - 6:00 pm</a></li>
-								<li>10/27: "Troika in Cuba: Soul Deep", UNI Gallery of Art, Thursday, October 27, 2016 - 6:00 pm to Monday, November 28, 2016 - 7:00 pm</li>
-								<li><a href="http://www.gbpac.com/upcoming-events/e-706/menopause-the-musical.aspx"> 10/27: Menopause The Musical, GBPAC, Thursday, October 27, 2016 - 7:00 pm</a></li>
-								<li><a href="http://uni.edu/studentlife/cab"> 10/27: CAB-toberfest, Maucker Union, Thursday, October 27, 2016 - 7:00 pm</a></li>
-								<li>10/27: Proud's Annual Drag-A-Ganza, Auditorium, Lang Hall, Thursday, October 27, 2016 - 7:00 pm to 9:00 pm</li>
-								<li>10/27: Student Mental Health Panel, Room 115, Seerley Hall, Thursday, October 27, 2016 - 7:00 pm</li>
-								<li><a href="https://www.uni.edu/langlit/news/ftrs-fall-2016-readers-announced"> 10/27: Final Thursday Reading Series featuring Taylor Brorby, Hearst Center for the Arts, Thursday, October 27, 2016 - 7:00 pm</a></li>
-								<li><a href="http://www.uni.edu/music/events"> 10/27: Faculty Artist Recital: Ann Bradfield, saxophone, Davis Hall, GBPAC, Thursday, October 27, 2016 - 8:00 pm</a></li>
-								<li>10/27: Horror on Hudson, Noehren Hall, Thursday, October 27, 2016 - 8:00 pm</li>
-								<li><a href="http://www.uni.edu/earth/content/observatory-visit"> 10/27: Observatory Show, Room 137, McCollum Science Hall, Thursday, October 27, 2016 - 9:00 pm to 10:00 pm</a></li>
-								<li>10/28: "Troika in Cuba: Soul Deep", UNI Gallery of Art, Thursday, October 27, 2016 - 6:00 pm to Monday, November 28, 2016 - 7:00 pm</li>
-								<li>10/28: You Matter at UNI Wrap-Up, Scholar Space, Rod Library, Friday, October 28, 2016 - 11:00 am to 12:00 pm</li>
-								<li>10/28: Let's Talk Session, Rooms 311 and 312, Rod Library, Friday, October 28, 2016 - 3:00 pm to 5:00 pm</li>
-								<li><a href="https://uni.edu/chemistry/Halloween-House-Information"> 10/28: UNI Halloween House, Second floor, McCollum Science Hall, Friday, October 28, 2016 - 4:30 pm</a></li>
-								<li>10/28: UNI Men's Basketball vs. Bemidji State (Exhibition), McLeod Center, Friday, October 28, 2016 - 7:00 pm</li>
-								<li><a href="http://uni.edu/theatre/theatre-uni/12th-night"> 10/28: TheatreUNI: Twelfth Night, Strayer-Wood Theatre, Friday, October 28, 2016 - 7:30 pm</a></li>
-								<li>10/28: ISA Halloween Dance: Superheroes vs. Villains, Old Central Ballroom, Maucker Union, Friday, October 28, 2016 - 8:00 pm</li>
-								<li><a href="http://www.uni.edu/music/events"> 10/29: Music Education Workshop, Davis Hall, GBPAC, Saturday, October 29, 2016 (All day)</a></li>
-								<li>10/29: 2016 Missouri Valley Conference Cross Country Championship, Pheasant Ridge Golf Course (Cedar Falls), Saturday, October 29, 2016 - 10:00 am</li>
-								<li>10/29: Football vs. North Dakota State, UNI-Dome, Saturday, October 29, 2016 - 6:00 pm</li>
-								<li><a href="http://uni.edu/theatre/theatre-uni/12th-night"> 10/29: TheatreUNI: Twelfth Night, Strayer-Wood Saturday, October 29, 2016 - 7:30 pm</a></li>
-								<li><a href="http://uni.edu/theatre/theatre-uni/12th-night"> 10/30: TheatreUNI: Twelfth Night, Strayer-Wood Sunday, October 30, 2016 - 2:00 pm</a></li>
+                                <li>ALL WEEK: "Troika in Cuba: Soul Deep", UNI Gallery of Art, Thursday, October 27, 2016 - 6:00 pm to Monday, November 28, 2016 - 7:00 pm</li>
+								<li><a href="http://uni.edu/ethics/current-events"> 10/31: RCR 5: Exploring Cross-Cultural Ethics in Scholarship, Elm Room, Maucker Union, Monday, October 31, 2016 - 12:00 pm</a></li>
+								<li><a href="http://www.uni.edu/music/events"> 10/31: UNI Viola Studio Recital, Davis Hall, GBPAC, Monday, October 31, 2016 - 6:00 pm</a></li>
+								<li><a href="http://www.uni.edu/music/events"> 10/31: Instrumental Concerto Competition Finals, Great Hall, GBPAC, Monday, October 31, 2016 - 7:30 pm</a></li>
+								<li>11/1: UNI PRSSA hosts Katie Patterson, Room 109, Curris Business Building, Tuesday, November 1, 2016 - 4:00 pm</li>
+								<li><a href="http://www.uni.edu/music/events"> 11/1: Guest Artist Recital: <q>Spiritual Standards</q> - Markus Burger, piano and Jan von Klewitz, saxophone, Bengtson Auditorium, Russell Hall, Tuesday, November 1, 2016 - 6:00 pm</a></li>
+								<li><a href="http://www.uni.edu/music/events"> 11/1: Faculty Recital: Amanda McCandless, clarinet, Davis Hall, GBPAC, Tuesday, November 1, 2016 - 6:00 pm</a></li>
+								<li>11/1: Spotlight Series: Concert Chorale and UNI Singers, Great Hall, GBPAC, Tuesday, November 1, 2016 - 7:30 pm</li>
+								<li><a href="http://www.uni.edu/provost/diversity"> 11/2: UNI-NCBI Leadership for Diversity and Inclusion Workshop, Room 301, Rod Library, Wednesday, November 2, 2016 -9:00 am to 4:00 pm</a></li>
+								<li>11/2: Fall Graduation Fair, Old Central Ballrooms A and B, Maucker Union, Wednesday, November 2, 2016 -10:00 am to 3:00 pm</li>
+								<li>11/2: Wheaton Wellness Session: Diabetes, Room 009, Gilchrist Hall, Wednesday, November 2, 2016 - 12:00 pm</li>
+								<li>11/2: Diversity Colloquium: Managing Emotions in the Classroom in an Era of Inequality, Room 287, Rod Library, Wednesday, November 2, 2016 - 12:00 pm</li>
+								<li><a href="http://www.uni.edu/teachered/teacher-education-induction-ceremony-convocation"> 11/2: UNI Teacher Education Induction Convocation, Great Hall, GBPAC, Wednesday, November 2, 2016 - 4:00 pm</a></li>
+								<li>11/2: Camp Adventure Info Session, Maucker Union (by Chats), Wednesday, November 2, 2016 - 5:00 pm to 8:00 pm</li>
+								<li><a href="http://www.uni.edu/music/events"> 11/2: Guest Artist Recital: Anibal dos Santos, viola, Davis Hall, GBPAC, Wednesday, November 2, 2016 - 8:00 pm</a></li>
+								<li><a href="http://www.uni.edu/ietti/wayup/"> 11/3: The Way Up Conference - 30th Anniversary, The Marriott Hotel and Conference Center, Coralville, Thursday, November 3, 2016 - 8:00 am to Friday, November 4, 2016 - 1:00 pm</a></li>
+								<li>11/3: Using surveys in data collection, Room 324, Rod Library, Thursday, November 3, 2016 - 12:15 pm</li>
+								<li>11/3: International Coffee Hour, Room 113, Maucker Union, Thursday, November 3, 2016 - 3:00 pm</li>
+								<li><a href="https://uni.edu/chemistry/seminar-schedule"> 11/3: Chemistry and Biochemistry Department Seminar, Room 201, McCollum Science Hall, Thursday, November 3, 2016 - 4:00 pm</a></li>
+								<li>11/3: Artists' Lecture: Karen Graffeo and Julio Larramendi, Kamerick Art Building, room 111, Thursday, November 3, 2016 - 6:00 pm</li>
+								<li><a href="http://uni.edu/theatre/theatre-uni/12th-night"> 11/3: TheatreUNI: Twelfth Night, Strayer-Wood, Thursday, November 3, 2016 - 7:30 pm</a></li>
+								<li><a href="http://www.uni.edu/earth/content/observatory-visit"> 11/3: Observatory Show, Room 137, McCollum Science Hall, Thursday, November 3, 2016 - 9:00 pm to 10:00 pm</a></li>
+								<li>11/4: Bosnian Culture and How to Pronounce Bosnian Names, Room 378, Rod Library, Friday, November 4, 2016 - 12:00 pm</li>
+								<li>11/4: UNI Swimming & Diving vs. South Dakota, Glen F. Henry Swimming & Diving Pool (WRC), Friday, November 4, 2016 - 5:00 pm</li>
+								<li>11/4: First Friday, Coffeehouse, Maucker Union, Friday, November 4, 2016 - 5:00 pm</li>
+								<li><a href="http://www.uni.edu/music/events"> 11/4: UNI Cantorei, Great Reading Room, Seerley Hall, Friday, November 4, 2016 - 6:00 pm</a></li>
+								<li><a href="http://www.uni.edu/music/events"> 11/4: UNI Jazz Band One, Bengtson Auditorium, Russell Hall, Friday, November 4, 2016 - 7:30 pm</a></li>
+								<li><a href="http://uni.edu/theatre/theatre-uni/12th-night"> 11/4: TheatreUNI: Twelfth Night, Strayer-Wood, Friday, November 4, 2016 - 7:30 pm</a></li>
+								<li><a href="http://www.uni.edu/music/events"> 11/5: Viola Festival, Davis Hall, GBPAC, Saturday, November 5, 2016 (All day)</a></li>
+								<li><a href="http://www.uni.edu/music/events"> 11/5: UNI Community Music School Recital Weekend, Russell Hall, Saturday, November 5, 2016 (All day) to Sunday, November 6, 2016 (All day)</a></li>
+								<li><a href="https://docs.google.com/a/uni.edu/forms/d/e/1FAIpQLSeaJJwLGja9Vzrg4J3P5Moc-0k6bvxF0nuVpxkSLdI7TEEXSg/viewform?c=0&w=1"> 11/5: Educating Educators 2016--Multicultural Teaching in Iowa: Becoming Prepared for the Changing Demographics, Center for Energy & Environmental Education, Saturday, November 5, 2016 - 8:00 am</a></li>
+								<li><a href="http://www.gbpac.com/upcoming-events/e-707/country-unplugged.aspx"> 11/5: Country Unplugged Featuring: Mark Chesnutt, Lorrie Morgan, and Joe Diffie, Gallagher Bluedorn Performing Arts Center, Saturday, November 5, 2016 - 7:00 pm</a></li>
+								<li>11/5: UNI Volleyball vs. Drake, McLeod Center, Saturday, November 5, 2016 - 7:00 pm</li>
+								<li><a href="http://uni.edu/theatre/theatre-uni/12th-night"> 11/5: TheatreUNI: Twelfth Night, Strayer-Wood, Saturday, November 5, 2016 - 7:30 pm</a></li>
+								<li><a href="http://uni.edu/theatre/theatre-uni/12th-night"> 11/6: TheatreUNI: Twelfth Night, Strayer-Wood, Sunday, November 6, 2016 - 2:00 pm</a></li>
                             </ul>
 						</div>
                     </article>
