updated documentary list

--- a/html_bucket_other_posts/documentaries-to-watch-for-class.html
+++ b/html_bucket_other_posts/documentaries-to-watch-for-class.html
@@ -140,6 +140,8 @@
 							<br>- Making a Murderer
 							<br>- Living with the Machigenga (Not available on Netflix. E-mail me if you need it).
 							<br>- First Contact: Lost Tribe of the Amazon
+							<br>- Life After People (Not available on Netflix. On history.com)
+							<br>- Cartel Land
 							
 							<br><br>Talk to me in class if you ever need this list again!
 							</p>	
