--- a/html_bucket_class_recaps/11-4-class-recap.html
+++ b/html_bucket_class_recaps/11-4-class-recap.html
@@ -123,7 +123,7 @@
 							Today we talked about registering for classes for the first 15 minutes of class. I will soon be sending out an e-mail with the relevant information as well as creating a new post on the website dedicated 
 							to registering for classes as well as advising holds. So keep an eye or your e-mail!<br><br>When everyone wasn't picking on me for my hawkeye shirt we spent the rest of the time discussing the bulk of Ishmael
 							and how it's viewpoints on mother culture made us think. This lead to quite a few different discussions which was awesome. We also decided that you can watch <a href="http://www.history.com/shows/life-after-people">Life after people on history.com</a> for extra credit! 
-							I'll make sure to update the extra-credit documentary list.<br><br>Your homework is the following!<br>read the following section from Ishmael by Daniel Quinn: <br>- The second quarter of the text (pg. 151-207)
+							I'll make sure to update the extra-credit documentary list.<br><br>Your homework is the following!<br>read the following section from Ishmael by Daniel Quinn: <br>- The third quarter of the text (pg. 151-207)
 							
 							<br><br>and the following from Calvin and Hobbes: 
 							<br>- Rosalyn v Stupendous Man (pg. 85-91) 
